--- a/config/locales/en/_bigbluebutton_rails.yml
+++ b/config/locales/en/_bigbluebutton_rails.yml
@@ -45,7 +45,7 @@ en:
   bigbluebutton_rails: 
     bigbluebutton: BigBlueButton
     rooms: 
-      default_welcome_msg: "Welcome to the conference <b>%{name}!</b><br/><br/>To join the audio conference from a SIP phone, dial %{voice_number}.<br/><br/>If you need help using the conference client <u><a href=\"http://www.bigbluebutton.org/videos/\">check out these videos</a></u>."
+      default_welcome_msg: "Welcome to the conference <b>%{name}!</b><br/><br/>To join the audio conference from a SIP phone, dial %{voice_number}.<br/><br/>If you need help using the conference client <u><a href=\"http://mconf.org/m/ufrgs/documentacao\">check out the documentation</a></u>."
       errors: 
         auth: 
           failure: "Authentication failure."
