--- a/config/locales/en/mconf.yml
+++ b/config/locales/en/mconf.yml
@@ -542,9 +542,10 @@ en:
     index:
       docs:
         headline: "Read the documentation for this service at (in portuguese):"
-        link_faq: "FAQ: <a href=\"%{url}\">click here</a>"
-        link_index: "General index: <a href=\"%{url}\">click here</a>"
-        link_tutorials: "Tutorials: <a href=\"%{url}\">click here</a>"
+        link_faq: "<a href=\"%{url}\">FAQ</a>"
+        link_index: "<a href=\"%{url}\">General index</a>"
+        link_moodle: "<a href=\"%{url}\">Use application on Moodle</a>"
+        link_tutorials: "<a href=\"%{url}\">Tutorials</a>"
         title: "Documentation"
     join_button: Join
     members: Members
