--- a/config/locales/pt-br/mconf.yml
+++ b/config/locales/pt-br/mconf.yml
@@ -569,9 +569,10 @@ pt-br:
     index:
       docs:
         headline: "Consulte a documentação deste serviço em:"
-        link_faq: "FAQ: <a href=\"%{url}\">clique aqui</a>"
-        link_index: "Índice geral da documentação: <a href=\"%{url}\">clique aqui</a>"
-        link_tutorials: "Tutoriais: <a href=\"%{url}\">clique aqui</a>"
+        link_faq: "<a href=\"%{url}\">FAQ</a>"
+        link_index: "<a href=\"%{url}\">Índice geral da documentação</a>"
+        link_moodle: "<a href=\"%{url}\">Uso de webconferência através do Moodle</a>"
+        link_tutorials: "<a href=\"%{url}\">Tutoriais</a>"
         title: "Documentação"
     join_button: Entrar
     members: Membros
