Fix the timezone and improve the ICS for events

--- a/config/locales/en/_events.yml
+++ b/config/locales/en/_events.yml
@@ -88,6 +88,8 @@ en:
       at: "at"
       clear_start_date: "Clear start date"
       clear_end_date: "Clear end date"
+    ics:
+      urls: "Event page: %{events}"
     index:
       create_new_event: "Add a new event"
       count:
