--- a/config/locales/en/_bigbluebutton_rails.yml
+++ b/config/locales/en/_bigbluebutton_rails.yml
@@ -105,8 +105,8 @@ en:
         update:
           success: "Your recording was successfully updated."
     rooms:
-      default_welcome_msg: "Welcome to <b>%%CONFNAME%%</b>!<br><br>To join the audio bridge click the headset icon (upper-left hand corner). Use a headset to avoid causing background noise for others.<br>"
-      default_welcome_msg_dial_number: "Welcome to <b>%%CONFNAME%%</b>!<br><br>To join the audio bridge click the headset icon (upper-left hand corner). Use a headset to avoid causing background noise for others.<br>You can call into this conference with a regular phone using the number \"%%DIALNUM%%\".<br>"
+      default_welcome_msg: "Welcome to <b>%%CONFNAME%%</b>!<br><br>This room has a limit of 75 participants (including the room's administrator) and 6 simultaneous cameras. Such measure is necessary to ensure the stability of the platform. In case of a higher number of participants, check out the <a href='https://www.ufrgs.br/redemultivideos/' target='_blank'>Rede Multivídeos</a> to search for other webconference solutions.<br>"
+      default_welcome_msg_dial_number: "Welcome to <b>%%CONFNAME%%</b>!<br><br>This room has a limit of 75 participants (including the room's administrator) and 6 simultaneous cameras. Such measure is necessary to ensure the stability of the platform. In case of a higher number of participants, check out the <a href='https://www.ufrgs.br/redemultivideos/' target='_blank'>Rede Multivídeos</a> to search for other webconference solutions.<br><br>You can call into this conference with a regular phone using the number \"%%DIALNUM%%\".<br>"
       errors:
         fetch_recordings:
           no_server: "There's no server associated with this room."
