--- a/config/locales/pt-br/_bigbluebutton_rails.yml
+++ b/config/locales/pt-br/_bigbluebutton_rails.yml
@@ -105,8 +105,8 @@ pt-br:
         update:
           success: "Sua gravação foi atualizada com sucesso."
     rooms:
-      default_welcome_msg: "Bem-vindo(a) a <b>%%CONFNAME%%</b>!<br><br>Para compartilhar o seu microfone, clique no botão com um headset (à esquerda da barra superior). Use um headset para ter uma melhor experiência de áudio com menos ruídos.<br>"
-      default_welcome_msg_dial_number: "Bem-vindo(a) a <b>%%CONFNAME%%</b>!<br><br>Para compartilhar o seu microfone, clique no botão com um headset (à esquerda da barra superior). Use um headset para ter uma melhor experiência de áudio com menos ruídos.<br>Você pode discar para esta conferência através de um telefone usando o número \"%%DIALNUM%%\".<br>"
+      default_welcome_msg: "Bem-vindo(a) a <b>%%CONFNAME%%</b>!<br><br>Esta sala Mconf possui o limite total de 75 participantes (incluindo o administrador da sala) e 6 câmeras simultâneas. Tal medida é necessária para viabilizar a estabilidade da plataforma. No caso de um maior número de participantes, consulte a <a href='https://www.ufrgs.br/redemultivideos/' target='_blank'>Rede Multivídeos</a> para a busca de outras soluções em webconferência.<br>"
+      default_welcome_msg_dial_number: "Bem-vindo(a) a <b>%%CONFNAME%%</b>!<br><br>Esta sala Mconf possui o limite total de 75 participantes (incluindo o administrador da sala) e 6 câmeras simultâneas. Tal medida é necessária para viabilizar a estabilidade da plataforma. No caso de um maior número de participantes, consulte a <a href='https://www.ufrgs.br/redemultivideos/' target='_blank'>Rede Multivídeos</a> para a busca de outras soluções em webconferência.<br><br>Você pode discar para esta conferência através de um telefone usando o número \"%%DIALNUM%%\".<br>"
       errors:
         fetch_recordings:
           no_server: "Não há nenhum servidor associado a esta sala."
