--- a/config/locales/en/mconf.yml
+++ b/config/locales/en/mconf.yml
@@ -885,7 +885,7 @@ en:
       register: "Register"
     banners:
       banner_expiring: 
-        banner_expiring_text: "Atenção! As gravações serão armazenadas por 6 meses, após este período serão automaticamente removidas do sistema. (O mesmo não é valido para gravações realizadas no Moodle.)"
+        banner_expiring_text: "Attention! Recordings will be deleted after 6 months"
     footer:
       copyright: "© 2010-%{year} %{site}."
       current_version: "Current version"
@@ -1314,7 +1314,7 @@ en:
       title: Press Ctrl+C to copy the text
       success: Text copied to clipboard
     recording_list:
-      banner_expiring: "Atention! Recordings will be deleted after 6 months"
+      banner_expiring: "Attention! Recordings will be deleted after 6 months"
       created: "Created"
       created_by: "Created by"
       destroy_confirm: "Are you sure you want to permanently remove this recording?"
