Minor text fixes

--- a/config/locales/pt-br/mconf.yml
+++ b/config/locales/pt-br/mconf.yml
@@ -1319,7 +1319,7 @@ pt-br:
       title: Aperte Ctrl+C para copiar o texto
       success: Texto copiado para a área de transferência
     recording_list:
-      banner_expiring: "Atenção! As gravações serão armazenadas por 6 meses, após este período serão automaticamente removidas do sistema. (O mesmo não é valido para gravações realizadas no Moodle.)"
+      banner_expiring: "Atenção! As gravações serão deletadas após 6 meses"
       created: "Criada"
       created_by: "Criada por"
       destroy_confirm: "Você tem certeza que deseja remover esta gravação permanentemente?"
