--- a/config/locales/en/mconf.yml
+++ b/config/locales/en/mconf.yml
@@ -885,7 +885,7 @@ en:
       register: "Register"
     banners:
       banner_expiring: 
-        banner_expiring_text: "Attention! Recordings will be deleted after 6 months"
+        banner_expiring_text: "Attention! Recordings will be stored for 6 months, after which they will be automatically removed from the system. (The same is not true for recordings made in Moodle.)"
     footer:
       copyright: "© 2010-%{year} %{site}."
       current_version: "Current version"
