--- a/config/locales/pt-br/_simple_form.yml
+++ b/config/locales/pt-br/_simple_form.yml
@@ -17,6 +17,8 @@ pt-br:
     labels:
       feedback:
         from: "Seu e-mail"
+        subject: "Título"
+        message: "Mensagem"
       user:
         edit:
           password: "Nova senha"
