--- a/config/locales/ru/_simple_form.yml
+++ b/config/locales/ru/_simple_form.yml
@@ -11,6 +11,8 @@ ru:
     labels:
       feedback:
         from: "Ваш email"
+        subject: "Заголовок"
+        message: "Сообщение"
       user:
         edit:
           password: "Новый пароль"
